# ytdownloader

./: .gitignore  Cargo.toml  README.md  build.rs  ytdownloader.rc
.github/workflows/: ci-release.yml  release.yml
src/: history.rs  lib.rs  main.rs  preset.rs  types.rs  ui.rs  updater.rs  util.rs  yt.rs
src/modes/: chapters.rs  manual.rs  timestamp.rs
