[package]
name = "ytdownloader"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
indicatif = "0.17"
inquire = "0.7"
dirs = "6.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
